// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreting Protos should load the Custom Message proto 1`] = `
"type Query {
  foos_BamService_GetW(input: foos_GetBamRequest_Input): foos_GetFoosResponse
  foos_BamService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type foos_GetFoosResponse {
  abcd: foos_Bam
}

type foos_Bam {
  id: BigInt
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

input foos_GetBamRequest_Input {
  id: Int
  abcd: foos_Bam_Input
}

input foos_Bam_Input {
  id: BigInt
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Custom Message2 proto 1`] = `
"type Query {
  foo_BamService_GetFOOs(input: foo_GetFOOsRequest_Input): foo_GetFOOsResponse
  foo_BamService_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type foo_GetFOOsResponse {
  foos: [foo_FOO]
}

type foo_FOO {
  id: BigInt
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

input foo_GetFOOsRequest_Input {
  id: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Empty proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_GetEmpty(input: io_xtech_MovieRequest_Input): io_xtech_EmptyRequest

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

scalar io_xtech_EmptyRequest @specifiedBy(url: \\"http://www.ecma-international.org/publications/files/ECMA-ST/ECMA-404.pdf\\")

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the Import Nested proto 1`] = `
"type Query {
  io_xtech_outer_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_outer_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_xtech_Result {
  result: [io_xtech_Item]
}

type io_xtech_Item {
  name: String
}

input io_xtech_TopLevel_Nested_Input {
  movie: io_xtech_Item_Input
}

input io_xtech_Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Movie proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the Nested proto 1`] = `
"type Query {
  io_xtech_Example_Get(input: io_xtech_TopLevel_Nested_Input): io_xtech_Result
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_xtech_Result {
  result: [io_xtech_Item]
}

type io_xtech_Item {
  name: String
}

input io_xtech_TopLevel_Nested_Input {
  movie: io_xtech_Item_Input
}

input io_xtech_Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the No Package Nested proto 1`] = `
"type Query {
  Example_Get(input: TopLevel_Nested_Input): Result
  Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type Result {
  result: [Item]
}

type Item {
  name: String
}

input TopLevel_Nested_Input {
  movie: Item_Input
}

input Item_Input {
  name: String
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the Outside proto 1`] = `
"type Query {
  io_outside_Example_GetMovies(input: io_outside_MovieRequest_Input): io_outside_MoviesResult

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_MovieRequest_Input): io_xtech_MoviesResult
  io_outside_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type io_outside_MoviesResult {
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_outside_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

input io_xtech_MovieRequest_Input {
  movie: io_xtech_Movie_Input
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;

exports[`Interpreting Protos should load the With All Values proto 1`] = `
"type Query {
  Example_Get(input: Item_Input): Result
  Example_connectivityState(tryToConnect: Boolean): ConnectivityState
}

type Result {
  result: [Item]
}

type Item {
  boolean: Boolean
  bytesType: Byte
  doubleNum: Float
  fixedint32: Int
  fixedint64: BigInt
  floatNum: Float
  integer32: Int
  integer64: BigInt
  sfixedint32: Int
  sfixedint64: BigInt
  sinteger32: Int
  sinteger64: BigInt
  str: String
  uinteger32: UnsignedInt
  uinteger64: BigInt
}

\\"\\"\\"The \`Byte\` scalar type represents byte value as a Buffer\\"\\"\\"
scalar Byte

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

\\"\\"\\"Integers that will have a value of 0 or more.\\"\\"\\"
scalar UnsignedInt

input Item_Input {
  boolean: Boolean
  bytesType: Byte
  doubleNum: Float
  fixedint32: Int
  fixedint64: BigInt
  floatNum: Float
  integer32: Int
  integer64: BigInt
  sfixedint32: Int
  sfixedint64: BigInt
  sinteger32: Int
  sinteger64: BigInt
  str: String
  uinteger32: UnsignedInt
  uinteger64: BigInt
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}"
`;

exports[`Interpreting Protos should load the With Underscores proto 1`] = `
"type Query {
  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_Example_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult

  \\"\\"\\"get all movies\\"\\"\\"
  io_xtech_AnotherExample_GetMovies(input: io_xtech_movie_request_Input): io_xtech_MoviesResult
  io_xtech_Example_connectivityState(tryToConnect: Boolean): ConnectivityState
  io_xtech_AnotherExample_connectivityState(tryToConnect: Boolean): ConnectivityState
}

\\"\\"\\"movie result message, contains list of movies\\"\\"\\"
type io_xtech_MoviesResult {
  \\"\\"\\"list of movies\\"\\"\\"
  result: [io_xtech_Movie]
}

\\"\\"\\"movie message payload\\"\\"\\"
type io_xtech_Movie {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp
  genre: io_xtech_Genre
}

type google_protobuf_Timestamp {
  seconds: BigInt
  nanos: Int
}

\\"\\"\\"
The \`BigInt\` scalar type represents non-fractional signed whole numeric values.
\\"\\"\\"
scalar BigInt

enum io_xtech_Genre {
  UNSPECIFIED
  ACTION
  DRAMA
}

input io_xtech_movie_request_Input {
  movie: io_xtech_Movie_Input
}

\\"\\"\\"movie message payload\\"\\"\\"
input io_xtech_Movie_Input {
  name: String
  year: Int
  rating: Float

  \\"\\"\\"list of cast\\"\\"\\"
  cast: [String]
  time: google_protobuf_Timestamp_Input
  genre: io_xtech_Genre
}

input google_protobuf_Timestamp_Input {
  seconds: BigInt
  nanos: Int
}

enum ConnectivityState {
  IDLE
  CONNECTING
  READY
  TRANSIENT_FAILURE
  SHUTDOWN
}

type Subscription {
  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_Example_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie

  \\"\\"\\"search movies by the name of the cast\\"\\"\\"
  io_xtech_AnotherExample_SearchMoviesByCast(input: io_xtech_SearchByCastRequest_Input): io_xtech_Movie
}

input io_xtech_SearchByCastRequest_Input {
  castName: String
}"
`;
